Default state of icon is now grayed out.
Also, what was formerly the "badge" API is now an "icon" API.

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   },
 
   "browser_action": {
-    "default_icon": "icons/19.png",
+    "default_icon": "icons/19-gray.png",
     "default_title": "GitHub Notifier"
   },
 
